<resources>
    <string name="app_name">TripKo</string>
    <string name="sobre_corea_text">La República de Corea es un país soberano de Asia Oriental, cuyo
        territorio comprende la mitad sur de la península de Corea englobando unas tres mil islas
        que la rodean. Aproximadamente la mitad de la población del país vive en su capital, Seúl,
        o en su zona metropolitana, que es una de las áreas metropolitanas más pobladas del mundo.
        Corea es una de las civilizaciones más antiguas del mundo, su idioma oficial es el coreano y
        su moneda el won coreano.</string>
    <string name="sobre_corea_title">Sobre Corea del Sur</string>
    <string name="gangwon_text">Gangwon</string>
    <string name="gyonggi_text">Gyonggi</string>
    <string name="seul_text">Seul</string>
    <string name="chungcheong_del_norte_text">Chungcheong del Norte</string>
    <string name="chungcheong_del_sur_text">Chungcheong del Sur</string>
    <string name="gyeongsang_del_norte_text">Gyeongsang del Norte</string>
    <string name="jeolla_del_norte_text">Jeolla del Norte</string>
    <string name="jeolla_del_sur_text">Jeolla del Sur</string>
    <string name="gwangju_text">Gwangju</string>
    <string name="daegu_text">Daegu</string>
    <string name="gyeongsang_del_sur_text">Gyeongsang del Sur</string>
    <string name="ulsan_text">Ulsan</string>
    <string name="busan_text">Busan</string>
    <string name="jeju_text">Jeju</string>
    <string name="comida_restaurante_text">Texto</string>
    <string name="comida_content_text">Aqui va texto.</string>
    <string name="comida_title_text">TITULO</string>
    <string name="cantidad_text_view">Cantidad</string>
    <string name="divisa_text">Divisa:</string>
    <string name="ps" />
    <string name="pasar_a_text">Pasar a:</string>
    <string name="calcular_button_text">Calcular</string>
    <string name="tripko_text">TripKo</string>
    <string name="clima_title">Clima</string>
    <string name="clima_text">   El clima de Corea del Sur es básicamente continental, con inviernos
        fríos y secos y veranos cálidos y lluviosos. La temperatura media de Seúl en enero es de –5 °C,
        y en julio de 25 °C. Las temperaturas del invierno son más elevadas a lo largo de la costa
        meridional y bastante más bajas en el interior montañoso.</string>
    <string name="ciudades_principales_title">Ciudades principales</string>
    <string name="ciudades_principales_text">   Ya sea por la cantidad de población de la ciudad,
        por su gastronomía, cultura o zonas turísticas... Estas son las cinco principales ciudades
        de Corea del Sur:</string>
    <string name="sobre_corea_text2">Más información</string>
    <string name="sobre_corea_btn_text">Sobre Corea del Sur</string>
    <string name="idioma_btn_text">Idioma</string>
    <string name="conversion_de_moneda_btn_text">Conversión de Moneda</string>
    <string name="transporte_btn_text">Transporte</string>
    <string name="entretenimineto_btn_text">Entretenimiento</string>
    <string name="gastronomia_btn_text">Gastronomía</string>
    <string name="sitios_turisticos_btn_text">Sitios Turísticos</string>
    <string name="contactos_de_interes_btn_text">Contactos de Interés</string>
    <string name="contactanos_text_button">Contactanos</string>
    <string name="aeropuertos_btn_text">Aeropuertos</string>
    <string name="ferrocarril_btn_text">Ferrocarril</string>
    <string name="autobuses_btn_text">Autobuses</string>
    <string name="metro_btn_text">Metro</string>
    <string name="ferri_btn_text">Ferri</string>
    <string name="taxis_btn_text">Taxis</string>
    <string name="alquiler_de_coches_btn_text">Alquiler de Coches</string>
    <string name="tarjetas_de_transporte_btn_text">Tarjetas de Transporte</string>
    <string name="sitios_turisticos_text">Museo</string>
    <string name="entretenimiento_text">Parques</string>
    <string name="cultura_title">Cultura</string>
    <string name="vestimenta_title">Vestimenta</string>
    <string name="emergencias_title">Emergencias</string>
    <string name="emergencias_internacional_text">Emergencias Internacional\n (02)790–7561</string>
    <string name="policia_text">Policía\n 112</string>
    <string name="bomberos_text">Bomberos y ambulancias\n 119</string>
    <string name="ayuda_medica_text">Ayuda médica\n 129</string>
    <string name="emergencias_medicas_text">Emergencias médicas\n 13399 </string>
    <string name="hospitales_title">Hospitales Internacionales</string>
    <string name="hospital1_text">Hospital Severance\n (02)361–6540</string>
    <string name="hospital2_text">Centro Médico Asan\n (02)3010–5001</string>
    <string name="hospital3_text">Centro Médico Samsung\n (02)3410–0200</string>
    <string name="inmigracion_title">Oficinas de Inmigración</string>
    <string name="oficina1_text">Cheju\n (064)22–3494</string>
    <string name="oficina2_text">Incheon\n (032)882–0544</string>
    <string name="oficina3_text">Aeorpuerto de Gimhae\n (051)972–1610</string>
    <string name="oficina4_text">Aeorpuerto de Gimpo\n (02)664–7614</string>
    <string name="oficina5_text">Seúl\n (02)650–6239</string>
    <string name="oficina6_text">Busan\n (051)463–7161</string>
    <string name="otros_contactos_title">Otros teléfonos de interés</string>
    <string name="otros1_text">Información turística\n 1330</string>
    <string name="otros2_text">Operadora llamadas internacionales\n 00799</string>
    <string name="otros3_text">Información llamadas internacionales\n 00794</string>
    <string name="otros4_text">Asistencia telefónica local en inglés\n 080–211–0114</string>
    <string name="otros5_text">Quejas turísticas\n (02)735–0101</string>
    <string name="idioma_coreano_btn_text">El idioma coreano</string>
    <string name="expresiones_btn_text">Expresiones útiles para viajar</string>
    <string name="alfabeto_btn_text">Alfabeto</string>
    <string name="el_idioma_coreano_title">El Idioma Coreano</string>
<string name="el_idioma_coreano_text1">Antiguamente el coreano se escribía en caracteres chinos
        (Hanja), en la actualidad se escribe en "Hangul" que es el alfabeto coreano.</string>
<string name="el_idioma_coreano_text2"> El "Hangul" tiene 24 letras, 14 de las cuales son
        consonantes y 10 vocales. La escrituracoreana no es ideográfica como la japonesa o
        la china.</string>
<string name="el_idioma_coreano_text3">Las formas de las letras del "hangul" se diseñaron
        conforme a los movimientos de la lengua, el paladar y los dientes. Hasta cinco letras
        pueden formar una unidad silábica.</string>
<string name="honorificos_title">Honoríficos</string>
<string name="honorificos_text1">Los honoríficos se usan para mostrar respeto cuando se habla
        de alguien superior en estatus: un pariente mayor, un desconocido o alguien de
        aproximadamente la misma edad o mayor, un jefe, maestro… </string>
<string name="honorificos_text2">Generalmente se usa sustantivos especiales o sufijos en los
        verbos para indicar la superioridad del sujeto. </string>
</resources>
