<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".idiomacoreano.Idioma_CoreanoActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cabecera"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#478BA2"
        app:layout_constraintBottom_toTopOf="@id/el_idioma_coreano_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/preguntasFrecuentesImageButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/preguntas_frecuentes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tripkoTextView"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tripkoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/rancho"
            android:text="@string/tripko_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#F2A490"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/homeImageButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toEndOf="@+id/tripkoTextView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/el_idioma_coreano_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_below="@id/cabecera"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/el_idioma_coreano_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/el_idioma_coreano_title"
                android:textSize="16sp"
                android:textColor="#000000"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/el_idioma_coreano_txt1"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/el_idioma_coreano_txt1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/el_idioma_coreano_text1"
                app:layout_constraintTop_toBottomOf="@id/el_idioma_coreano_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/el_idioma_coreano_txt2"
                android:layout_marginTop="24dp"/>

            <TextView
                android:id="@+id/el_idioma_coreano_txt2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/el_idioma_coreano_text2"
                app:layout_constraintTop_toBottomOf="@id/el_idioma_coreano_txt1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/idioma_coreano_img1"
                android:layout_marginTop="16dp"/>

            <ImageView
                android:id="@+id/idioma_coreano_img1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                app:layout_constraintBottom_toTopOf="@id/el_idioma_coreano_txt3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/el_idioma_coreano_txt2"
                app:srcCompat="@drawable/idioma_coreano_img1" />

            <TextView
                android:id="@+id/el_idioma_coreano_txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/el_idioma_coreano_text3"
                app:layout_constraintTop_toBottomOf="@id/idioma_coreano_img1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/idioma_coreano_img2"
                android:layout_marginTop="16dp"/>

            <ImageView
                android:id="@+id/idioma_coreano_img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                app:srcCompat="@drawable/idioma_coreano_img2"
                app:layout_constraintTop_toBottomOf="@id/el_idioma_coreano_txt3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/honorificos_title"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/honorificos_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/honorificos_title"
                android:textSize="16sp"
                android:textColor="#000000"
                app:layout_constraintTop_toBottomOf="@id/idioma_coreano_img2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/honorificos_text1"
                android:layout_marginTop="24dp"/>

            <TextView
                android:id="@+id/honorificos_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/honorificos_text1"
                app:layout_constraintTop_toBottomOf="@id/honorificos_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/honorificos_img"
                android:layout_marginTop="16dp"/>

            <ImageView
                android:id="@+id/honorificos_img"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                app:srcCompat="@drawable/honorificos_img1"
                app:layout_constraintTop_toBottomOf="@id/honorificos_text1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/honorificos_text2"/>

            <TextView
                android:id="@+id/honorificos_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/honorificos_text2"
                app:layout_constraintTop_toBottomOf="@id/honorificos_img"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>